--- a/templates/zookeeper.service.j2
+++ b/templates/zookeeper.service.j2
@@ -12,6 +12,9 @@ Group={{ zookeeper_system_user }}
 
 Environment=ZOO_LOG_DIR={{ zookeeper_log_dir }}
 Environment=ZOO_LOG4J_PROP=INFO,ROLLINGFILE
+{% if zookeeper_jmx_exporter_enabled %}
+Environment="SERVER_JVMFLAGS=-javaagent:{{ zookeeper_jmx_exporter_path }}={{ zookeeper_jmx_exporter_port }}:{{ zookeeper_jmx_exporter_config }}"
+{% endif %}
 
 PIDFile={{ zookeeper_data_dir }}/zookeeper_server.pid
 
